// Licensed to the Apache Software Foundation (ASF) under one
// or more contributor license agreements.  See the NOTICE file
// distributed with this work for additional information
// regarding copyright ownership.  The ASF licenses this file
// to you under the Apache License, Version 2.0 (the
// "License"); you may not use this file except in compliance
// with the License.  You may obtain a copy of the License at
//
//   http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing,
// software distributed under the License is distributed on an
// "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
// KIND, either express or implied.  See the License for the
// specific language governing permissions and limitations
// under the License.
//
// The profile fetch request and response.
//
// Author: yurize@apache.org (Yuri Zelikov)

syntax = "proto2";

package profile;

option java_package = "org.waveprotocol.box.profile";
option java_outer_classname = "ProfilesProto";


message ProfileRequest {
  // The profile addresses in email format.
  repeated string addresses = 1;
}

message ProfileResponse {
  
  message FetchedProfile {
    // The profile address in email format.
    required string address = 1;
    // The name.
    required string name = 2;
    // The image URL.
    required string imageUrl = 3;
    // The link to website.
    optional string profileUrl = 4;
  }
  
  // The fetched profiles.
  repeated FetchedProfile profiles = 1;
}

